fix: simplify code and spacing
Code could be simplified by combining the button and h2
into the header and add spacing below header and text since
they had 2 separate spacings.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -21,17 +21,19 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
-  justify-content: space-between;
   gap: 16px;
   padding: 16px;
 }
 
-.content {
+.header {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
-  gap: 16px;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+
+.text {
+  margin-bottom: 16px;
 }
 
 h2 {
